<resources>
    <string name="app_name">gcrfREAR</string>
    <string name="pref_key_file_length">pref_key_file_length</string>
    <string name="pref_key_frequency">pref_key_frequency</string>
    <string name="pref_key_upload_active">pref_key_upload_active</string>
    <string name="pref_key_backup_active">pref_key_backup_active</string>
    <string name="pref_key_upload_url">pref_key_upload_url</string>
    <string name="pref_key_upload_device">pref_key_upload_device</string>
    <string name="pref_key_upload_period">pref_key_upload_period</string>
    <string name="last_upload_date">last_upload_date</string>
    <string name="base_url">http://129.215.193.51:8080/gcrfREAR/webapi/gcrf-REAR/</string>
    <string name="register_user">gcrfREAR</string>
    <string name="system_time">SystemTime</string>
    <string name="elapsed_real_time">ElapsedRealTime</string>
    <string name="log_file">rear-log.txt</string>
    <string name="sensor_accel_check">AccelSensor</string>
    <string name="sensor_gyro_check">GyroSensor</string>
    <string name="sensor_magnet_check">MagnetSensor</string>
    <string name="current_data_store_file">FileDataStore</string>
    <string name="main_instruction_text">Please leave stationary and record while charging.</string>
</resources>
